# robot_with_ds4_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml  thirdparty.repos
.github/workflows/: colcon_tests.yaml
config/: params.yaml
include/controller_cpp/: ControllerNode.hpp
launch/: avoid_obstacle.launch.py  controller.launch.py
src/: controller_main.cpp
src/controller_cpp/: ConrollerNode.cpp  ControllerNode.cpp
